--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
 
     </nav>
     <div class="content">
-        <h1>Internet deve essere al servizio del "bene pubblico": manifesto di Tim Berners-Lee</h1>
-        <span>Scritto da  the Booleaner</span>
+        <header>
+            <h1>Internet deve essere al servizio del "bene pubblico": manifesto di Tim Berners-Lee</h1>
+            <div>Scritto da the Booleaner</div>
+            <span>il 10/10/2020</span>
+        </header>
+        
     </div>
 </body>
 </html>
