--- a/index.html
+++ b/index.html
@@ -70,10 +70,13 @@
                         </tr>
                     </tbody>
                 </table>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime itaque quisquam eius excepturi reprehenderit maiores corrupti fugiat, molestias, doloribus eos cupiditate quidem unde nihil amet placeat vitae, consequatur nemo quas.</p>
             </section>
         </main>
         <footer>
-
+            <h3>Potrebbero Interessarti</h3>
+            <div></div>
+            <div></div>
         </footer>
     </div>
 </body>
