--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <!--Nav Section-->
-    <nav></nav>
+    <nav>
+        <img id="logo" src="./img/logo.svg" alt="Logo">
+    </nav>
     <!--Container-->
     <div id="container">
         <!--header Section-->
@@ -73,6 +75,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime itaque quisquam eius excepturi reprehenderit maiores corrupti fugiat, molestias, doloribus eos cupiditate quidem unde nihil amet placeat vitae, consequatur nemo quas.</p>
             </section>
         </main>
+        <!--Footer Section-->
         <footer>
             <h3>Potrebbero Interessarti</h3>
             <div></div>
