--- a/index.html
+++ b/index.html
@@ -37,38 +37,38 @@
                      quis aspernatur ratione mollitia, 
                     autem eligendi placeat, rerum suscipit 
                     ab possimus natus earum repudiandae. Illum?</p>
-                    <!--List Section-->
                     <ul>
                         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque aut sapiente.</li>
                         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam possimus necessitatibus.</li>
                         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt nihil, dolores ut dolorem.</li>
                     </ul>
+                    <!--List Section-->
             </section>
             <!--Table Section-->
             <section>
                 <table>
                     <thead>
                         <tr>
-                            <th>Lorem ipsum dolor</th>
+                            <th class="first_cell">Lorem ipsum dolor</th>
                             <th>Lorem ipsum dolor</th>
                             <th>Lorem ipsum dolor</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td>Lorem ipsum dolor</td>
-                            <td>Lorem ipsum dolor</td>
-                            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe blanditiis, animi ipsum culpa beatae pariatur eaque similique voluptate non asperiores doloribus maiores eum aperiam impedit a fugiat exercitationem nobis dolorem!</td>
+                            <td class="first_cell">Lorem ipsum dolor</td>
+                            <td class="second_cell">Lorem ipsum dolor</td>
+                            <td class="third_cell">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe blanditiis, animi ipsum culpa beatae pariatur eaque similique voluptate non asperiores doloribus maiores eum aperiam impedit a fugiat exercitationem nobis dolorem!</td>
                         </tr>
                         <tr>
-                            <td>Lorem ipsum dolor</td>
-                            <td>Lorem ipsum dolor</td>
-                            <td>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto molestiae aut, voluptatibus incidunt deleniti deserunt, soluta cumque repellat animi ipsa veniam dolorem quisquam voluptas. Ex nemo non atque id similique!</td>
+                            <td class="first_cell">Lorem ipsum dolor</td>
+                            <td class="second_cell">Lorem ipsum dolor</td>
+                            <td class="third_cell">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto molestiae aut, voluptatibus incidunt deleniti deserunt, soluta cumque repellat animi ipsa veniam dolorem quisquam voluptas. Ex nemo non atque id similique!</td>
                         </tr>
                         <tr>
-                            <td>Lorem ipsum dolor</td>
-                            <td>Lorem ipsum dolor</td>
-                            <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam ducimus pariatur officia dignissimos qui debitis ullam deserunt facilis doloremque eaque sint consequatur, aspernatur itaque consectetur animi similique ea cumque molestias?</td>
+                            <td class="first_cell">Lorem ipsum dolor</td>
+                            <td class="second_cell">Lorem ipsum dolor</td>
+                            <td class="third_cell">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam ducimus pariatur officia dignissimos qui debitis ullam deserunt facilis doloremque eaque sint consequatur, aspernatur itaque consectetur animi similique ea cumque.</td>
                         </tr>
                     </tbody>
                 </table>
