--- a/index.html
+++ b/index.html
@@ -32,11 +32,7 @@
             </section>
             <!--Text Section-->
             <section>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Omnis a asperiores nostrum est voluptates? Facilis
-                     quis aspernatur ratione mollitia, 
-                    autem eligendi placeat, rerum suscipit 
-                    ab possimus natus earum repudiandae. Illum?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis a asperiores nostrum est voluptates? Facilis quis aspernatur ratione mollitia,  autem eligendi placeat, rerum suscipit  ab possimus natus earum repudiandae. Illum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt autem ullam soluta veniam perspiciatis optio laborum molestiae beatae. Soluta minus nobis aliquid, assumenda atque sequi non iusto odio dolores temporibus?</p>
                     <ul>
                         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque aut sapiente.</li>
                         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam possimus necessitatibus.</li>
@@ -48,24 +44,24 @@
             <section>
                 <table>
                     <thead>
-                        <tr>
+                        <tr id="blue">
                             <th class="first_cell">Lorem ipsum dolor</th>
                             <th>Lorem ipsum dolor</th>
-                            <th>Lorem ipsum dolor</th>
+                            <th id="firstLorem">Lorem ipsum dolor</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
+                        <tr class="light-blue">
                             <td class="first_cell">Lorem ipsum dolor</td>
                             <td class="second_cell">Lorem ipsum dolor</td>
                             <td class="third_cell">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe blanditiis, animi ipsum culpa beatae pariatur eaque similique voluptate non asperiores doloribus maiores eum aperiam impedit a fugiat exercitationem nobis dolorem!</td>
                         </tr>
-                        <tr>
+                        <tr id="white-blue">
                             <td class="first_cell">Lorem ipsum dolor</td>
                             <td class="second_cell">Lorem ipsum dolor</td>
                             <td class="third_cell">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto molestiae aut, voluptatibus incidunt deleniti deserunt, soluta cumque repellat animi ipsa veniam dolorem quisquam voluptas. Ex nemo non atque id similique!</td>
                         </tr>
-                        <tr>
+                        <tr class="light-blue">
                             <td class="first_cell">Lorem ipsum dolor</td>
                             <td class="second_cell">Lorem ipsum dolor</td>
                             <td class="third_cell">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam ducimus pariatur officia dignissimos qui debitis ullam deserunt facilis doloremque eaque sint consequatur, aspernatur itaque consectetur animi similique ea cumque.</td>
