--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
         <!--Footer Section-->
         <footer>
             <h3>Potrebbero Interessarti</h3>
-            <div></div>
-            <div></div>
+            <div id="box1"></div>
+            <div id="box2"></div>
         </footer>
     </div>
 </body>
