might_interest_section

--- a/index.html
+++ b/index.html
@@ -68,14 +68,17 @@
                         </tr>
                     </tbody>
                 </table>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime itaque quisquam eius excepturi reprehenderit maiores corrupti fugiat, molestias, doloribus eos cupiditate quidem unde nihil amet placeat vitae, consequatur nemo quas.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime itaque quisquam eius excepturi reprehenderit maiores corrupti fugiat, molestias, doloribus eos cupiditate quidem unde nihil amet placeat vitae, consequatur nemo quas. 
+                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa itaque hic quaerat necessitatibus? Quae perferendis libero a praesentium ea sed voluptatibus possimus dolorum minus quasi. Illo amet veritatis repudiandae praesentium.
+
+                </p>
             </section>
         </main>
         <!--Footer Section-->
         <footer>
             <h3>Potrebbero Interessarti</h3>
-            <div id="box1"></div>
-            <div id="box2"></div>
+            <div class="box" id="box1"><strong>Lorem ipsum dolor</strong></div>
+            <div class="box" id="box2"><strong>Lorem ipsum dolor</strong></div>
         </footer>
     </div>
 </body>
