--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </section>
             <!--Text Section-->
             <section>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis a asperiores nostrum est voluptates? Facilis quis aspernatur ratione mollitia,  autem eligendi placeat, rerum suscipit  ab possimus natus earum repudiandae. Illum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt autem ullam soluta veniam perspiciatis optio laborum molestiae beatae. Soluta minus nobis aliquid, assumenda atque sequi non iusto odio dolores temporibus?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis a asperiores nostrum est voluptates? Facilis quis aspernatur ratione mollitia,  autem eligendi placeat, rerum suscipit  ab possimus natus earum repudiandae. Illum? Lorem ipsum dolor sit amet consectetur adipisicing elit. <span class="subtitling">Incidunt autem ullam soluta veniam perspiciatis optio laborum molestiae beatae.</span> Soluta minus nobis aliquid, assumenda atque sequi non iusto odio dolores temporibus?</p>
                     <ul>
                         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque aut sapiente.</li>
                         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam possimus necessitatibus.</li>
@@ -69,7 +69,7 @@
                     </tbody>
                 </table>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime itaque quisquam eius excepturi reprehenderit maiores corrupti fugiat, molestias, doloribus eos cupiditate quidem unde nihil amet placeat vitae, consequatur nemo quas. 
-                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa itaque hic quaerat necessitatibus? Quae perferendis libero a praesentium ea sed voluptatibus possimus dolorum minus quasi. Illo amet veritatis repudiandae praesentium.
+                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa itaque hic quaerat necessitatibus?<span class="subtitling"> Quae perferendis libero a praesentium ea sed voluptatibus possimus dolorum</span> minus quasi. Illo amet veritatis repudiandae praesentium.
 
                 </p>
             </section>
