--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>The Booleaner</title>
     <link rel="stylesheet" href="style.css">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kaisei+Tokumin&display=swap" rel="stylesheet">
 </head>
 <body>
     <!--Nav Section-->
@@ -70,7 +72,6 @@
                 </table>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime itaque quisquam eius excepturi reprehenderit maiores corrupti fugiat, molestias, doloribus eos cupiditate quidem unde nihil amet placeat vitae, consequatur nemo quas. 
                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa itaque hic quaerat necessitatibus?<span class="subtitling"> Quae perferendis libero a praesentium ea sed voluptatibus possimus dolorum</span> minus quasi. Illo amet veritatis repudiandae praesentium.
-
                 </p>
             </section>
         </main>
